Update CommandCompletion.java